<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="32dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/failedImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_main_error" />

        <TextView
            android:id="@+id/failedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:text="@string/main_failed_reason" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp">

            <Button
                android:id="@+id/retryButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/selector_main_firstbutton"
                android:textColor="@color/text_white_87"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:text="@string/main_failed_retry" />

            <Button
                android:id="@+id/fbButton"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/selector_main_secondbutton"
                android:textColor="@color/text_black_87"
                android:layout_below="@+id/retryButton"
                android:text="@string/main_failed_fb" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>